@@ -1,3 +1,9 @@
+Oct 27th 2000: xqf-0.9.4f2 - Alex Burger <alex@fragit.net>
+-Added Copy+ menu option - copies the following server info to the clipboard:
+ ping,ip:port,name,map,curplayers,maxplayers
+-Now creates a LaunchInfo.txt in ~/.qf when launching a game for use with IRC 
+ scripts etc.  Toggle on / off using Preferences / Appearance 
+
 Oct 8th 2000: xqf-0.9.4f - Alex Burger <alex@fragit.net>
 -UnrealTournament master support using Gamespy style master via QStat 2.4a
 -Add Epic UT Master server to default master list
